// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Router v3 Compatibility lets you pass props with cloneElement 1`] = `
<div>
  <div>
    yo
  </div>
</div>
`;

exports[`React Router v3 Compatibility onEnter can redirect 1`] = `null`;

exports[`React Router v3 Compatibility onEnter passes props to onEnter 1`] = `
Object {
  "location": Object {
    "key": "initial",
    "pathname": "/foo/test",
    "query": Object {},
    "search": "",
    "state": undefined,
  },
  "params": Object {
    "bar": "test",
  },
}
`;

exports[`React Router v3 Compatibility passes url params 1`] = `
<div>
  <ul>
    <li>
      <a
        className="active"
        href="/user/123"
        onClick={[Function]}
        style={undefined}
      >
        Bob
      </a>
    </li>
    <li>
      <a
        className="active"
        href="/user/abc"
        onClick={[Function]}
        style={undefined}
      >
        Sally
      </a>
    </li>
  </ul>
  <div
    className="User"
  >
    <h1>
      User id: 
      bob
    </h1>
    <ul>
      <li>
        <a
          className="active"
          href="/user/bob/tasks/foo"
          onClick={[Function]}
          style={undefined}
        >
          foo task
        </a>
      </li>
      <li>
        <a
          className="active"
          href="/user/bob/tasks/bar"
          onClick={[Function]}
          style={undefined}
        >
          bar task
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`React Router v3 Compatibility renders deeply nested routes 1`] = `
<div>
  <ul>
    <li>
      <a
        className="active"
        href="/user/123"
        onClick={[Function]}
        style={undefined}
      >
        Bob
      </a>
    </li>
    <li>
      <a
        className="active"
        href="/user/abc"
        onClick={[Function]}
        style={undefined}
      >
        Sally
      </a>
    </li>
  </ul>
  <div
    className="User"
  >
    <h1>
      User id: 
      bob
    </h1>
    <ul>
      <li>
        <a
          className="active"
          href="/user/bob/tasks/foo"
          onClick={[Function]}
          style={undefined}
        >
          foo task
        </a>
      </li>
      <li>
        <a
          className="active"
          href="/user/bob/tasks/bar"
          onClick={[Function]}
          style={undefined}
        >
          bar task
        </a>
      </li>
    </ul>
    <div
      className="Task"
    >
      <h2>
        User ID: 
        bob
      </h2>
      <h3>
        Task ID: 
        123
      </h3>
    </div>
  </div>
</div>
`;

exports[`React Router v3 Compatibility renders generally 1`] = `
<div>
  <ul>
    <li>
      <a
        className="active"
        href="/user/123"
        onClick={[Function]}
        style={undefined}
      >
        Bob
      </a>
    </li>
    <li>
      <a
        className="active"
        href="/user/abc"
        onClick={[Function]}
        style={undefined}
      >
        Sally
      </a>
    </li>
  </ul>
  <h2>
    Index
  </h2>
</div>
`;
